--- a/style.scss
+++ b/style.scss
@@ -1,26 +1,117 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
-*{
+// 主色與次要色
+$color-main: #252525;
+$color-sub: #ae57a4;
+
+// 文字大小：最大
+$font-size-big: 36px;
+// 字體
+$font-family-main: "Bebas Neue", cursive;
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 微軟正黑體;
+    font-family:微軟正黑體;
+    color: $color-main;
 }
+
+// 導覽列
 #navigation {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     box-shadow: 0 5px 5px #64646450;
-    padding: 20px 0 ;
-     
+    padding: 20px 120px;
+    align-items: center;
+    //固定:寬度會跑掉
+    position: fixed;
+    width: 100%;
+    background: white;
+
+    .logo {
+        font-family:$font-family-main;
+        font-size: 42px;
+        transition: 0.3s;
+        text-decoration: none;
+        letter-spacing: 2px;
+
+        &:hover {
+            color: $color-sub;
+        }
+    }
+
+    .link {
+        text-align: center;
+        a {
+            padding: 30px 30px 30px 40px;
+            text-decoration: none;
+            transition: 0.3s;
+            letter-spacing: 10px;
+
+            &:hover {
+                color: $color-sub;
+            }
+        }
+    }
     .social {
-    
+        text-align: right;
+
         img {
             filter: invert(9%) sepia(11%) saturate(6%) hue-rotate(336deg) brightness(100%) contrast(86%);
             transition: 0.2s;
+            width: 32px;
+            margin-left: 30px;
 
             &:hover {
                 filter: invert(44%) sepia(34%) saturate(878%) hue-rotate(256deg) brightness(90%) contrast(88%);
             }
         }
     }
-} 
+}
+
+// 橫幅
+#banner {
+    width: 100%;
+    height: 100vh;
+    background: #eee;
+}
+
+// 關於我
+#about {
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+}
+h2{
+    font-size: 200px;
+    letter-spacing: 30px;
+    padding-left: 20px;
+    font-family: $font-family-main;
+    // margin-top: 30px;
+}
+
+p{
+    padding: 30px;
+    margin-bottom: 50px;
+    letter-spacing: 5px;
+}
+
+// 標題
+.title{
+    font-family: $font-size-big;
+    padding: 100px;
+}
+
+// 按鈕：盒型
+.button-box{
+    border: 2px solid $color-main;
+    padding: 10px 60px;
+    text-decoration: none;
+    transition: 0.3s;
+
+    &:hover{
+        background:$color-main;
+        color:white;
+    }
+}
