--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@
 $color-main: #252525;
 $color-sub: #ae57a4;
 $color-bg-gray: #f9f9f9;
+$color-white: #cdcdcd;
 
 // 文字大小：最大
 $font-size-big: 36px;
@@ -29,44 +30,43 @@ $font-family-main: "Bebas Neue", cursive;
     position: fixed;
     width: 100%;
     background: white;
+}
 
-    .logo {
-        font-family: $font-family-main;
-        font-size: 42px;
-        transition: 0.3s;
+.logo {
+    font-family: $font-family-main;
+    font-size: 42px;
+    transition: 0.3s;
+    text-decoration: none;
+    letter-spacing: 2px;
+
+    &:hover {
+        color: $color-sub;
+    }
+}
+.link {
+    text-align: center;
+    a {
+        padding: 30px 30px 30px 40px;
         text-decoration: none;
-        letter-spacing: 2px;
+        transition: 0.3s;
+        letter-spacing: 10px;
 
         &:hover {
             color: $color-sub;
         }
     }
+}
+.social {
+    text-align: right;
 
-    .link {
-        text-align: center;
-        a {
-            padding: 30px 30px 30px 40px;
-            text-decoration: none;
-            transition: 0.3s;
-            letter-spacing: 10px;
+    img {
+        filter: invert(9%) sepia(11%) saturate(6%) hue-rotate(336deg) brightness(100%) contrast(86%);
+        transition: 0.2s;
+        width: 32px;
+        margin-left: 30px;
 
-            &:hover {
-                color: $color-sub;
-            }
-        }
-    }
-    .social {
-        text-align: right;
-
-        img {
-            filter: invert(9%) sepia(11%) saturate(6%) hue-rotate(336deg) brightness(100%) contrast(86%);
-            transition: 0.2s;
-            width: 32px;
-            margin-left: 30px;
-
-            &:hover {
-                filter: invert(44%) sepia(34%) saturate(878%) hue-rotate(256deg) brightness(90%) contrast(88%);
-            }
+        &:hover {
+            filter: invert(44%) sepia(34%) saturate(878%) hue-rotate(256deg) brightness(90%) contrast(88%);
         }
     }
 }
@@ -83,20 +83,20 @@ $font-family-main: "Bebas Neue", cursive;
     width: 100%;
     height: 100vh;
     text-align: center;
+    padding: 40px;
 
     h2 {
         font-size: 200px;
         letter-spacing: 30px;
         padding-left: 20px;
         font-family: $font-family-main;
-        // margin-top: 30px;
+        margin-bottom: 30px;
     }
-}
-
-p {
-    padding: 30px;
-    margin-bottom: 50px;
-    letter-spacing: 5px;
+    p {
+        // padding: 30px;
+        margin-bottom: 100px;
+        letter-spacing: 5px;
+    }
 }
 
 // 標題
@@ -119,24 +119,82 @@ p {
     }
 }
 
+// 按鈕外的區塊
+.button-div {
+    text-align: center;
+    margin-top: 50px;
+}
+
 // 作品集
 #works {
     height: 100vh;
     background: $color-bg-gray;
+
     #work-box {
         width: 1200px;
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
         margin: 0 auto;
-        grid-gap: 20px 25px;
+        // repeat(數量，一格的寬度)
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 340px);
+        // 格線間隙：上下 左右
+        grid-gap: 20px 35px;
 
         .work-box-small {
-            image {
-                width: 100%;
+            img {
                 display: block;
+                width: 100%;
                 height: 300px;
-                background: black;
+                background: #eee;
+            }
+
+            h2 {
+                text-align: center;
+                // 變形：位移 Y 軸(單位)
+                transform: translateY(-30px);
+            }
+
+            span {
+                display: inline-block;
+                border: 1.5px solid #000;
+                border-radius: 30px;
+                padding: 3px 12px;
+                margin-top: 12px;
+                margin-left: 10px;
+                font-size: 12px;
             }
         }
+    }
+}
+
+// 頁尾
+footer {
+    background: $color-main;
+    padding: 90px 0;
+    text-align: center;
+
+    .logo {
+        color: $color-white;
+    }
+
+    .link {
+        a {
+            color: $color-white;
+        }
+    }
+
+    .social {
+        text-align: center;
+
+        img {
+            filter: invert(86%) sepia(0%) saturate(0%) hue-rotate(73deg) brightness(98%) contrast(91%);
+            margin: 30px 20px;
+        }
+    }
+
+    #copyright {
+        color: $color-white;
+        font-size: 8px;
+        margin-top: 50px;
     }
 }
