--- a/style.css
+++ b/style.css
@@ -12,26 +12,67 @@
 #navigation {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-  -webkit-box-shadow: 0 5px 5px #64646450;
-          box-shadow: 0 5px 5px #64646450;
   padding: 20px 120px;
+  -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   position: fixed;
   width: 100%;
   background: white;
+  z-index: 1;
+}
+
+@media screen and (min-width: 1025px) {
+  #navigation {
+        grid-template-areas: "logo link social";
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #navigation {
+        grid-template-areas: "logo social menu";
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #navigation {
+    padding: 10px 6px;
+  }
+}
+
+#navigation #menu {
+  grid-area: menu;
+}
+
+@media screen and (min-width: 1025px) {
+  #navigation #menu {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #navigation #menu {
+    display: block;
+    margin-left: auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #navigation #menu {
+    width: 32px;
+  }
 }
 
 .logo {
   font-family: "Bebas Neue", cursive;
   font-size: 42px;
+  text-decoration: none;
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  text-decoration: none;
   letter-spacing: 2px;
+  grid-area: logo;
 }
 
 .logo:hover {
@@ -40,11 +81,12 @@
 
 .link {
   text-align: center;
+  grid-area: link;
 }
 
 .link a {
-  padding: 30px 30px 30px 40px;
   text-decoration: none;
+  padding: 30px 30px 30px 40px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
   letter-spacing: 10px;
@@ -54,8 +96,15 @@
   color: #ae57a4;
 }
 
+@media screen and (max-width: 1024px) {
+  .link {
+    display: none;
+  }
+}
+
 .social {
   text-align: right;
+  grid-area: social;
 }
 
 .social img {
@@ -68,8 +117,14 @@
 }
 
 .social img:hover {
-  -webkit-filter: invert(44%) sepia(34%) saturate(878%) hue-rotate(256deg) brightness(90%) contrast(88%);
-          filter: invert(44%) sepia(34%) saturate(878%) hue-rotate(256deg) brightness(90%) contrast(88%);
+  -webkit-filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
+          filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
+}
+
+@media screen and (max-width: 767px) {
+  .social img {
+    margin-left: 0;
+  }
 }
 
 #banner {
@@ -82,31 +137,46 @@
   width: 100%;
   height: 100vh;
   text-align: center;
-  padding: 40px;
+  margin-top: 100px;
 }
 
 #about h2 {
-  font-size: 200px;
-  letter-spacing: 30px;
-  padding-left: 20px;
+  font-size: 250px;
   font-family: "Bebas Neue", cursive;
-  margin-bottom: 30px;
+  letter-spacing: 30px;
+  padding-left: 30px;
+  margin-top: 50px;
+}
+
+@media screen and (max-width: 1024px) {
+  #about h2 {
+    margin-top: 200px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #about h2 {
+    font-size: 64px;
+    letter-spacing: 10px;
+    padding-left: 10px;
+    margin-top: 100px;
+  }
 }
 
 #about p {
-  margin-bottom: 100px;
-  letter-spacing: 5px;
+  padding: 30px;
+  margin-bottom: 50px;
 }
 
 .title {
-  font-family: 36px;
-  padding: 100px;
+  font-size: 36px;
+  padding: 35px;
   text-align: center;
 }
 
 .button-box {
-  border: 2px solid #252525;
   padding: 10px 60px;
+  border: 2px solid #252525;
   text-decoration: none;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -127,6 +197,20 @@
   background: #f9f9f9;
 }
 
+@media screen and (max-width: 1024px) {
+  #works {
+    height: auto;
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #works {
+    height: auto;
+    padding-bottom: 100px;
+  }
+}
+
 #works #work-box {
   width: 1200px;
   display: -ms-grid;
@@ -137,6 +221,22 @@
   -ms-grid-rows: (340px)[2];
       grid-template-rows: repeat(2, 340px);
   grid-gap: 20px 35px;
+}
+
+@media screen and (max-width: 1024px) {
+  #works #work-box {
+    width: 100%;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    padding: 0 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #works #work-box {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 #works #work-box .work-box-small img {
@@ -181,14 +281,29 @@ footer .social {
 }
 
 footer .social img {
-  -webkit-filter: invert(86%) sepia(0%) saturate(0%) hue-rotate(73deg) brightness(98%) contrast(91%);
-          filter: invert(86%) sepia(0%) saturate(0%) hue-rotate(73deg) brightness(98%) contrast(91%);
+  -webkit-filter: invert(100%) sepia(0%) saturate(7495%) hue-rotate(289deg) brightness(99%) contrast(101%);
+          filter: invert(100%) sepia(0%) saturate(7495%) hue-rotate(289deg) brightness(99%) contrast(101%);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
   margin: 30px 20px;
+}
+
+footer .social img:hover {
+  -webkit-filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
+          filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
 }
 
 footer #copyright {
   color: #cdcdcd;
   font-size: 8px;
   margin-top: 50px;
+}
+
+.logo-small {
+  color: #cdcdcd;
+  font-family: "Bebas Neue", cursive;
+  letter-spacing: 3px;
+  padding-left: 3px;
+  font-size: 16px;
 }
 /*# sourceMappingURL=style.css.map */
