--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,11 @@ $font-size-big: 36px;
 // 字體
 $font-family-main: "Bebas Neue", cursive;
 
+// RWD：桌上、平板、手機
+$desktop: 1025px;
+$table: 1024px;
+$mobile: 767px;
+
 * {
     margin: 0;
     padding: 0;
@@ -22,32 +27,72 @@ $font-family-main: "Bebas Neue", cursive;
 // 導覽列
 #navigation {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    box-shadow: 0 5px 5px #64646450;
+
     padding: 20px 120px;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
     align-items: center;
-    //固定:寬度會跑掉
+    // 固定：寬度會跑掉
     position: fixed;
     width: 100%;
     background: white;
+    // 深度軸：離眼睛越近數字越大
+    z-index: 1;
+
+    @media screen and (min-width: $desktop) {
+        grid-template-areas: "logo link social";
+    }
+
+    // 平板
+    @media screen and (max-width: $table) {
+        // 格線樣版區域： " 區域名稱 "
+        grid-template-areas: "logo social menu";
+    }
+    // 手機
+    @media screen and (max-width: $mobile) {
+        padding: 10px 6px;
+    }
+
+    // 選單
+    #menu {
+        grid-area: menu;
+
+        // 桌電：隱藏
+        @media screen and (min-width: $desktop) {
+            display: none;
+        }
+        // 平板：顯示
+        @media screen and (max-width: $table) {
+            display: block;
+            // 左邊自動
+            margin-left: auto;
+        }
+        // 手機
+        @media screen and (max-width: $mobile) {
+            width: 32px;
+        }
+    }
 }
 
 .logo {
     font-family: $font-family-main;
     font-size: 42px;
-    transition: 0.3s;
     text-decoration: none;
+    transition: 0.3s;
     letter-spacing: 2px;
+    grid-area: logo;
 
     &:hover {
         color: $color-sub;
     }
 }
+
 .link {
     text-align: center;
+    grid-area: link;
+
     a {
-        padding: 30px 30px 30px 40px;
         text-decoration: none;
+        padding: 30px 30px 30px 40px;
         transition: 0.3s;
         letter-spacing: 10px;
 
@@ -55,9 +100,16 @@ $font-family-main: "Bebas Neue", cursive;
             color: $color-sub;
         }
     }
+
+    // 平板：隱藏
+    @media screen and (max-width: $table) {
+        display: none;
+    }
 }
+
 .social {
     text-align: right;
+    grid-area: social;
 
     img {
         filter: invert(9%) sepia(11%) saturate(6%) hue-rotate(336deg) brightness(100%) contrast(86%);
@@ -66,7 +118,12 @@ $font-family-main: "Bebas Neue", cursive;
         margin-left: 30px;
 
         &:hover {
-            filter: invert(44%) sepia(34%) saturate(878%) hue-rotate(256deg) brightness(90%) contrast(88%);
+            filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
+        }
+
+        // 手機
+        @media screen and (max-width: $mobile) {
+            margin-left: 0;
         }
     }
 }
@@ -83,33 +140,45 @@ $font-family-main: "Bebas Neue", cursive;
     width: 100%;
     height: 100vh;
     text-align: center;
-    padding: 40px;
+    margin-top: 100px;
 
     h2 {
-        font-size: 200px;
-        letter-spacing: 30px;
-        padding-left: 20px;
+        font-size: 250px;
         font-family: $font-family-main;
-        margin-bottom: 30px;
+        letter-spacing: 30px;
+        padding-left: 30px;
+        margin-top: 50px;
+
+        // 平板
+        @media screen and (max-width: $table) {
+            margin-top: 200px;
+        }
+        // 手機
+        @media screen and (max-width: $mobile) {
+            font-size: 64px;
+            letter-spacing: 10px;
+            padding-left: 10px;
+            margin-top: 100px;
+        }
     }
+
     p {
-        // padding: 30px;
-        margin-bottom: 100px;
-        letter-spacing: 5px;
+        padding: 30px;
+        margin-bottom: 50px;
     }
 }
 
 // 標題
 .title {
-    font-family: $font-size-big;
-    padding: 100px;
+    font-size: $font-size-big;
+    padding: 35px;
     text-align: center;
 }
 
 // 按鈕：盒型
 .button-box {
-    border: 2px solid $color-main;
     padding: 10px 60px;
+    border: 2px solid $color-main;
     text-decoration: none;
     transition: 0.3s;
 
@@ -118,7 +187,6 @@ $font-family-main: "Bebas Neue", cursive;
         color: white;
     }
 }
-
 // 按鈕外的區塊
 .button-div {
     text-align: center;
@@ -129,6 +197,18 @@ $font-family-main: "Bebas Neue", cursive;
 #works {
     height: 100vh;
     background: $color-bg-gray;
+    // margin-bottom: 100px;
+
+    // 平板
+    @media screen and (max-width: $table) {
+        height: auto;
+        padding-bottom: 100px;
+    }
+    // 手機
+    @media screen and (max-width: $mobile) {
+        height: auto;
+        padding-bottom: 100px;
+    }
 
     #work-box {
         width: 1200px;
@@ -139,6 +219,17 @@ $font-family-main: "Bebas Neue", cursive;
         grid-template-rows: repeat(2, 340px);
         // 格線間隙：上下 左右
         grid-gap: 20px 35px;
+
+        // 平板
+        @media screen and (max-width: $table) {
+            width: 100%;
+            grid-template-columns: repeat(2, 1fr);
+            padding: 0 30px;
+        }
+        // 手機
+        @media screen and (max-width: $mobile) {
+            grid-template-columns: repeat(1, 1fr);
+        }
 
         .work-box-small {
             img {
@@ -187,8 +278,13 @@ footer {
         text-align: center;
 
         img {
-            filter: invert(86%) sepia(0%) saturate(0%) hue-rotate(73deg) brightness(98%) contrast(91%);
+            filter: invert(100%) sepia(0%) saturate(7495%) hue-rotate(289deg) brightness(99%) contrast(101%);
+            transition: 0.2s;
             margin: 30px 20px;
+
+            &:hover {
+                filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
+            }
         }
     }
 
@@ -197,4 +293,13 @@ footer {
         font-size: 8px;
         margin-top: 50px;
     }
+}
+
+// 小的 LOGO
+.logo-small {
+    color: $color-white;
+    font-family: $font-family-main;
+    letter-spacing: 3px;
+    padding-left: 3px;
+    font-size: 16px;
 }
