--- a/style.scss
+++ b/style.scss
@@ -133,7 +133,13 @@ $mobile: 767px;
     width: 100%;
     height: 100vh;
     background: #eee;
-}
+    // 溢出：隱藏
+    overflow: hidden;
+    
+    .dots {
+        bottom: 60px;
+    }
+
 
 // 關於我
 #about {
@@ -302,4 +308,16 @@ footer {
     letter-spacing: 3px;
     padding-left: 3px;
     font-size: 16px;
+}
+
+// 返回頂端按鈕
+#arrow {
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    background: #eee;
+    border-radius: 50%;
+    padding: 10px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
