--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
 }
 
 .logo:hover {
-  color: #ae57a4;
+  color: #6eb3ff;
 }
 
 .link {
@@ -93,7 +93,7 @@
 }
 
 .link a:hover {
-  color: #ae57a4;
+  color: #6eb3ff;
 }
 
 @media screen and (max-width: 1024px) {
@@ -117,8 +117,8 @@
 }
 
 .social img:hover {
-  -webkit-filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
-          filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
+  -webkit-filter: invert(63%) sepia(8%) saturate(2974%) hue-rotate(177deg) brightness(105%) contrast(102%);
+          filter: invert(63%) sepia(8%) saturate(2974%) hue-rotate(177deg) brightness(105%) contrast(102%);
 }
 
 @media screen and (max-width: 767px) {
@@ -138,15 +138,29 @@
   bottom: 60px;
 }
 
-#banner #about {
+@media screen and (max-width: 1024px) {
+  #banner {
+    height: 100%;
+  }
+  #banner .slick-track {
+    height: 900px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #banner .slick-track {
+    height: 500px;
+  }
+}
+
+#about {
   width: 100%;
   height: 100vh;
   text-align: center;
-  margin-top: 100px;
 }
 
-#banner #about h2 {
-  font-size: 150px;
+#about h2 {
+  font-size: 200px;
   font-family: "Bebas Neue", cursive;
   letter-spacing: 30px;
   padding-left: 30px;
@@ -154,13 +168,13 @@
 }
 
 @media screen and (max-width: 1024px) {
-  #banner #about h2 {
+  #about h2 {
     margin-top: 200px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  #banner #about h2 {
+  #about h2 {
     font-size: 64px;
     letter-spacing: 10px;
     padding-left: 10px;
@@ -168,18 +182,18 @@
   }
 }
 
-#banner #about p {
+#about p {
   padding: 30px;
   margin-bottom: 50px;
 }
 
-#banner .title {
+.title {
   font-size: 36px;
   padding: 35px;
   text-align: center;
 }
 
-#banner .button-box {
+.button-box {
   padding: 10px 60px;
   border: 2px solid #252525;
   text-decoration: none;
@@ -187,36 +201,36 @@
   transition: 0.3s;
 }
 
-#banner .button-box:hover {
+.button-box:hover {
   background: #252525;
   color: white;
 }
 
-#banner .button-div {
+.button-div {
   text-align: center;
   margin-top: 50px;
 }
 
-#banner #works {
+#works {
   height: 100vh;
   background: #f9f9f9;
 }
 
 @media screen and (max-width: 1024px) {
-  #banner #works {
+  #works {
     height: auto;
     padding-bottom: 100px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  #banner #works {
+  #works {
     height: auto;
     padding-bottom: 100px;
   }
 }
 
-#banner #works #work-box {
+#works #work-box {
   width: 1200px;
   display: -ms-grid;
   display: grid;
@@ -229,7 +243,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-  #banner #works #work-box {
+  #works #work-box {
     width: 100%;
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
@@ -238,26 +252,26 @@
 }
 
 @media screen and (max-width: 767px) {
-  #banner #works #work-box {
+  #works #work-box {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
   }
 }
 
-#banner #works #work-box .work-box-small img {
+#works #work-box .work-box-small img {
   display: block;
   width: 100%;
   height: 300px;
   background: #eee;
 }
 
-#banner #works #work-box .work-box-small h2 {
+#works #work-box .work-box-small h2 {
   text-align: center;
   -webkit-transform: translateY(-30px);
           transform: translateY(-30px);
 }
 
-#banner #works #work-box .work-box-small span {
+#works #work-box .work-box-small span {
   display: inline-block;
   border: 1.5px solid #000;
   border-radius: 30px;
@@ -267,44 +281,37 @@
   font-size: 12px;
 }
 
-#banner footer {
+footer {
   background: #252525;
   padding: 90px 0;
   text-align: center;
 }
 
-#banner footer .logo {
+footer .logo {
   color: #cdcdcd;
 }
 
-#banner footer .link a {
+footer .link a {
   color: #cdcdcd;
 }
 
-#banner footer .social {
+footer .social {
   text-align: center;
 }
 
-#banner footer .social img {
-  -webkit-filter: invert(100%) sepia(0%) saturate(7495%) hue-rotate(289deg) brightness(99%) contrast(101%);
-          filter: invert(100%) sepia(0%) saturate(7495%) hue-rotate(289deg) brightness(99%) contrast(101%);
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
+footer .social img {
+  -webkit-filter: invert(86%) sepia(0%) saturate(0%) hue-rotate(73deg) brightness(98%) contrast(91%);
+          filter: invert(86%) sepia(0%) saturate(0%) hue-rotate(73deg) brightness(98%) contrast(91%);
   margin: 30px 20px;
 }
 
-#banner footer .social img:hover {
-  -webkit-filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
-          filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
-}
-
-#banner footer #copyright {
+footer #copyright {
   color: #cdcdcd;
   font-size: 8px;
   margin-top: 50px;
 }
 
-#banner .logo-small {
+.logo-small {
   color: #cdcdcd;
   font-family: "Bebas Neue", cursive;
   letter-spacing: 3px;
