--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
 
 // 主色與次要色
 $color-main: #252525;
-$color-sub: #ae57a4;
+$color-sub: #6eb3ff;
 $color-bg-gray: #f9f9f9;
 $color-white: #cdcdcd;
 
@@ -27,7 +27,7 @@ $mobile: 767px;
 // 導覽列
 #navigation {
     display: grid;
-
+    
     padding: 20px 120px;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
     align-items: center;
@@ -55,7 +55,7 @@ $mobile: 767px;
     // 選單
     #menu {
         grid-area: menu;
-
+        
         // 桌電：隱藏
         @media screen and (min-width: $desktop) {
             display: none;
@@ -68,7 +68,7 @@ $mobile: 767px;
         }
         // 手機
         @media screen and (max-width: $mobile) {
-            width: 32px;
+            width: 32px;   
         }
     }
 }
@@ -80,7 +80,7 @@ $mobile: 767px;
     transition: 0.3s;
     letter-spacing: 2px;
     grid-area: logo;
-
+    
     &:hover {
         color: $color-sub;
     }
@@ -102,7 +102,7 @@ $mobile: 767px;
     }
 
     // 平板：隱藏
-    @media screen and (max-width: $table) {
+    @media screen and (max-width: $table){
         display: none;
     }
 }
@@ -118,7 +118,7 @@ $mobile: 767px;
         margin-left: 30px;
 
         &:hover {
-            filter: invert(47%) sepia(14%) saturate(2129%) hue-rotate(256deg) brightness(87%) contrast(85%);
+            filter: invert(63%) sepia(8%) saturate(2974%) hue-rotate(177deg) brightness(105%) contrast(102%);
         }
 
         // 手機
@@ -140,16 +140,35 @@ $mobile: 767px;
         bottom: 60px;
     }
 
+    // 平板
+    @media screen and (max-width: $table) {
+        height: 100%;
+
+        .slick-track {
+            height: 900px;
+        }
+
+        img {
+            // 物件適應：img 版本的 background-size
+            // object-fit: cover;
+        }
+    }
+    // 手機
+    @media screen and (max-width: $mobile) {
+        .slick-track {
+            height: 500px;
+        }
+    }
+}
 
 // 關於我
 #about {
     width: 100%;
     height: 100vh;
     text-align: center;
-    margin-top: 100px;
 
     h2 {
-        font-size:150px;
+        font-size: 200px;
         font-family: $font-family-main;
         letter-spacing: 30px;
         padding-left: 30px;
@@ -203,7 +222,6 @@ $mobile: 767px;
 #works {
     height: 100vh;
     background: $color-bg-gray;
-    // margin-bottom: 100px;
 
     // 平板
     @media screen and (max-width: $table) {
