--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
 
 // 主色與次要色
 $color-main: #252525;
-$color-sub: #9F35FF;
+$color-sub: #9524ff;
 $color-bg-gray: #f9f9f9;
 $color-white: #cdcdcd;
 
@@ -118,7 +118,7 @@ $mobile: 767px;
         margin-left: 30px;
 
         &:hover {
-            filter: invert(63%) sepia(8%) saturate(2974%) hue-rotate(177deg) brightness(105%) contrast(102%);
+            filter: invert(13%) sepia(0%) saturate(1%) hue-rotate(158deg) brightness(90%) contrast(93%);
         }
 
         // 手機
@@ -289,7 +289,7 @@ footer {
     text-align: center;
 
     .logo {
-        color: $color-white;
+        color: $color-sub;
     }
 
     .link {
@@ -308,7 +308,7 @@ footer {
     }
 
     #copyright {
-        color: $color-white;
+        color: $color-sub;
         font-size: 8px;
         margin-top: 50px;
     }
@@ -316,7 +316,7 @@ footer {
 
 // 小的 LOGO
 .logo-small {
-    color: $color-white;
+    color: $color-sub;
     font-family: $font-family-main;
     letter-spacing: 3px;
     padding-left: 3px;
